# projectCS

./: .gitignore  CMakeLists.txt  README.md
docs/weekly-reports/: weekly-report-09-13-nov.txt  weekly-report-1-4-dec.txt  weekly-report-14-18.txt  weekly-report-23-27-nov.txt  weekly-report-30-4-dec.txt  weekly-report-7-11-dec  weekly-report_16-20-nov.txt
lib/built_covid_data/: coviddata.csv
lib/cities_data/: cities_swe.csv  cities_swe_test.csv
lib/matplotplusplus-1.0.1/: .gitignore
src/: geoplotter.py  parameters.hh  src.cc  types.cc  types.hh  visualization.cc  visualization.hh
